--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,17 @@
 <resources>
     <string name="app_name">XPDroid</string>
-
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_example">Example action</string>
-
     <string name="action_settings">Settings</string>
 
-    <string name="inicio">Inicio</string>
-    <string name="favorito">Favorito</string>
-    <string name="programable">Programable</string>
-    <string name="manual">Manual</string>
-    <string name="objetivo">Objetivo</string>
-    <string name="recordatorio">Recordatorio</string>
-
-    <string-array name="menu_options">
-        <item>@string/inicio</item>
-        <item>@string/favorito</item>
-        <item>@string/programable</item>
-        <item>@string/manual</item>
-        <item>@string/objetivo</item>
-        <item>@string/recordatorio</item>
+    <string-array name="menu_options_array">
+        <item>Inicio</item>
+        <item>Gastos Favoritos</item>
+        <item>Gastos Programables</item>
+        <item>Objetivos</item>
+        <item>Recordatorios</item>
+        <item>Ayuda</item>
     </string-array>
 
 </resources>
