Crear Gasto Programable Activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,9 @@
     <string name="categoria">Categoría</string>
     <string name="importe">Importe</string>
     <string name="guardar">Guardar</string>
+    <string name="title_activity_crear_gasto_programable">Crear Gasto Programable</string>
+    <string name="reloj">Reloj</string>
+    <string name="horario">Horario</string>
+    <string name="repeticion">Repetición</string>
 
 </resources>
