--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="title_activity_crear_gasto_favorito">Crear Gasto Favorito</string>
     <string name="title_activity_crear_objetivo">Crear Objetivo</string>
     <string name="duracion">Duración</string>
+    <string name="title_activity_crear_recordatorio">Crear Recordatorio</string>
 
     <string name="categoria1">Transportes</string>
     <string name="categoria2">Alimentos</string>
