--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="title_activity_crear_objetivo">Crear Objetivo</string>
     <string name="duracion">Duración</string>
     <string name="title_activity_crear_recordatorio">Crear Recordatorio</string>
+    <string name="title_activity_xpdroid">Actividad Base de XPDroid</string>
 
     <string name="categoria1">Transportes</string>
     <string name="categoria2">Alimentos</string>
