--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="navdrawitem4">Gastos Programables</string>
     <string name="navdrawitem5">Objetivos</string>
     <string name="navdrawitem6">Recordatorios</string>
-    <string name="navdrawitem7">Ayuda</string>
+    <string name="navdrawitem7">Notificaciones</string>
+    <string name="navdrawitem8">Ayuda</string>
 
     <string name="title_activity_crear_gasto">Crear Gasto</string>
     <string name="title_activity_gastos_favoritos">Gastos Favoritos</string>
