Se agrego animacion de las activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_crear_gasto_programable">Crear Gasto Programable!</string>
     <string name="action_crear_objetivo">Crear Objetivo de Gastos!</string>
     <string name="action_crear_recordatorio">Crear Recordatorio!</string>
+    <string name="action_ver_historial">Ver Historial Completo!</string>
     <string name="gasto_guardado_mensaje">Gasto guardado éxitosamente!</string>
     <string name="gasto_programado_mensaje">Gasto programado éxitosamente!</string>
     <string name="action_settings">Settings</string>
