--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_crear_gasto_programable">Crear Gasto Programable!</string>
     <string name="action_crear_objetivo">Crear Objetivo de Gastos!</string>
     <string name="action_crear_recordatorio">Crear Recordatorio!</string>
-    <string name="action_ver_historial">Ver Historial Completo!</string>
+    <string name="action_ver_historial">Buscar mas Gastos!</string>
     <string name="gasto_guardado_mensaje">Gasto guardado éxitosamente!</string>
     <string name="gasto_programado_mensaje">Gasto programado éxitosamente!</string>
     <string name="action_settings">Settings</string>
@@ -24,7 +24,8 @@
     <string name="title_activity_crear_gasto">Crear Gasto</string>
     <string name="title_activity_gastos_favoritos">Gastos Favoritos</string>
     <string name="fecha">Fecha</string>
-    <string name="dia_o_mes">Dia o Mes</string>
+    <string name="fecha_desde">Fecha Desde:</string>
+    <string name="fecha_hasta">Fecha Hasta:</string>
     <string name="calendario">Calendario</string>
     <!--<string name="spinner_mes">Mes</string>-->
     <string name="boton_mostrar_mas_gastos">Mostrar mas Gastos</string>
@@ -53,9 +54,12 @@
     <string name="duracion">Duración</string>
     <string name="title_activity_crear_recordatorio">Crear Recordatorio</string>
     <string name="title_activity_xpdroid">Actividad Base de XPDroid</string>
-    <string name="ultimos_gastos_titulo">Ultimos 10 Gastos Realizados:</string>
-    <string name="ver_mas_gastos_titulo">Ver Mas Gastos Realizados</string>
+    <string name="gastos_mes_titulo">Gastos del Mes Realizados:</string>
+    <string name="ver_mas_gastos_titulo">Buscar Gastos Realizados</string>
 
+    <string name="boton_buscar">Buscar</string>
+
+    <string name="categoria0">Cualquiera</string>
     <string name="categoria1">Transportes</string>
     <string name="categoria2">Alimentos</string>
     <string name="categoria3">Supermercado</string>
@@ -72,6 +76,6 @@
     <string name="semanal">Semanal</string>
     <string name="mensual">Mensual</string>
     <string name="anual">Anual</string>
-    <string name="title_activity_historial_gastos_completo">HistorialGastosCompletoActivity</string>
+    <string name="title_activity_historial_gastos_completo">Busqueda de Gastos Realizados</string>
 
 </resources>
