--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,8 @@
     <string name="mensual">Mensual</string>
     <string name="anual">Anual</string>
     <string name="title_activity_historial_gastos_completo">Busqueda de Gastos Realizados</string>
+    <string name="title_activity_tratar_gasto">Tratar Gasto</string>
+    <string name="actualizar">Actualizar</string>
+    <string name="borrar">Borrar</string>
 
 </resources>
