--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,10 @@
     <string name="action_crear_objetivo">Crear Objetivo de Gastos!</string>
     <string name="action_crear_recordatorio">Crear Recordatorio!</string>
     <string name="action_ver_historial">Buscar mas Gastos!</string>
-    <string name="gasto_guardado_mensaje">Gasto guardado éxitosamente!</string>
-    <string name="gasto_programado_mensaje">Gasto programado éxitosamente!</string>
-    <string name="gasto_eliminado_mensaje">Gasto eliminado éxitosamente!</string>
+    <string name="gasto_guardado_mensaje">Gasto guardado exitosamente!</string>
+    <string name="gasto_programado_mensaje">Gasto programado exitosamente!</string>
+    <string name="gasto_eliminado_mensaje">Gasto eliminado exitosamente!</string>
+    <string name="gasto_actualizado_mensaje">Gasto actualizado exitosamente!</string>
     <string name="action_settings">Settings</string>
 
     <string name="navdrawitem1">Inicio</string>
