--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="gasto_programado_mensaje">Gasto programado exitosamente!</string>
     <string name="gasto_eliminado_mensaje">Gasto eliminado exitosamente!</string>
     <string name="gasto_actualizado_mensaje">Gasto actualizado exitosamente!</string>
+    <string name="gasto_favorito_guardado_mensaje">Favorito guardado exitosamente!</string>
     <string name="action_settings">Settings</string>
 
     <string name="navdrawitem1">Inicio</string>
