--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,8 +92,9 @@
     <string name="borrar">Borrar</string>
     <string name="eliminar">Eliminar</string>
     <string name="title_activity_tratar_gasto_favorito">Tratar Gasto Favorito</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_tratar_objetivo">Tratar Objetivo</string>
+
+    <string name="info_limite_objetivos_alcanzado">Límite de objetivos alcanzado</string>
+    <string name="objetivo_existente">Objetivo %1$s existente</string>
 
 </resources>
