--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,10 +88,13 @@
     <string name="anual">Anual</string>
     <string name="title_activity_historial_gastos_completo">Busqueda de Gastos Realizados</string>
     <string name="title_activity_tratar_gasto">Tratar Gasto</string>
+    <string name="title_activity_editar_gasto">Editar Gasto</string>
+    <string name="title_activity_editar_gasto_programable">Editar Gasto Programable</string>
     <string name="actualizar">Actualizar</string>
     <string name="borrar">Borrar</string>
     <string name="eliminar">Eliminar</string>
     <string name="editar">Editar</string>
+    <string name="title_activity_editar_gasto_favorito">Editar Gasto Favorito</string>
     <string name="title_activity_tratar_gasto_favorito">Tratar Gasto Favorito</string>
     <string name="title_activity_tratar_objetivo">Tratar Objetivo</string>
     <string name="title_activity_tratar_gasto_programable">TratarGastoProgramableActivity</string>
