--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="title_activity_historial_gastos_completo">Busqueda de Gastos Realizados</string>
     <string name="title_activity_tratar_gasto">Tratar Gasto</string>
     <string name="title_activity_editar_gasto">Editar Gasto</string>
+    <string name="title_activity_editar_objetivo">Editar Objetivo</string>
     <string name="title_activity_editar_gasto_programable">Editar Gasto Programable</string>
     <string name="actualizar">Actualizar</string>
     <string name="borrar">Borrar</string>
