Cambios en pantalla principal: -Acumulado mensual -Alerta de presupuesto alcanzado
Servicio Presupuesto:
-Actualización de totales para nuevo gasto, edición y borrado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,5 @@
     <string name="info_limite_presupuesto_alcanzado">Límite de presupuesto alcanzado</string>
     <string name="presupuesto_existente">Presupuesto %1$s existente</string>
     <string name="no_hay_favoritos">No hay Gastos Favoritos cargados</string>
-
+    <string name="alerta_presupuesto">Presupuesto alcanzado!</string>
 </resources>
