#13  Vista Crear Presupuesto terminada #15  Funcionalidad Totales parcialmente implementada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,8 @@
     <string name="navdrawitem3">Favoritos</string>
     <string name="navdrawitem4">Programables</string>
     <string name="navdrawitem5">Presupuesto</string>
-    <string name="navdrawitem6">Recordatorios</string>
-    <string name="navdrawitem7">Notificaciones</string>
-    <string name="navdrawitem8">Ayuda</string>
+    <string name="navdrawitem6">Totales</string>
+    <string name="navdrawitem7">Ayuda</string>
 
     <string name="title_activity_crear_gasto">Crear Gasto</string>
     <string name="title_activity_gastos_favoritos">Gastos Favoritos</string>
