#13 Actividad terminada Queda pendiente confirmar con @aschdmit7 el comportamiento del spinner Repetición en edición de gastos programables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="navdrawitem4">Programables</string>
     <string name="navdrawitem5">Presupuesto</string>
     <string name="navdrawitem6">Totales</string>
-    <string name="navdrawitem7">Ayuda</string>
+    <string name="navdrawitem7">Acerca de</string>
 
     <string name="title_activity_crear_gasto">Crear Gasto</string>
     <string name="title_activity_gastos_favoritos">Gastos Favoritos</string>
